--- a/src/styles/components/_questions.scss
+++ b/src/styles/components/_questions.scss
@@ -58,6 +58,11 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 1.38;
+
+    span {
+      color: $main-accent-color;
+    }
+    
   
    @media screen and (min-width: 1440px) {
       font-size: 18px;
